--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,3 +1,3 @@
 steps:
   - name: gcr.io/cloud-builders/gsutil
-    args: ["-m", "rsync", "-r", "-c", "-d", ".", "gs://www.acceptitas.com"]
+    args: ["-m", "rsync", "-r", "-c", "-d", ".", "gs://acceptitas.com"]
